@@ -6,6 +6,7 @@
   * Added changeTitle() to M.LoaderView
   * Fixed a bug in style() with the disabled-property
   * Fixed a bug in styleUpdate(), since disabled-property lead to problems with autogrow mechanism
+  * Fixed a bug in M.EventDispatcher (no unbind of jqm-based events)
 
 ** Version 0.6 - Date 21.07.2011 **
 
